2002-09-12  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (formataddr): Remove function.

	(make_date): Utilize email.Utils.formatdate().

2002-09-11  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* pythonlib: New directory to house any overrides of standard
	modules and packages.

	* pythonlib/email: Add version 2.3 of the `email' package.

2002-08-29  <sen_ml@eccosys.com>

	* FilterParser.py: Make the parser recognize the "hold" action by
	adding "hold" to in_action.

	* Defaults.py: Added documentation for "hold" action to
	ACTION_INCOMING, ACTION_FAIL_DATED, ACTION_EXPIRED_DATED,
	ACTION_FAIL_SENDER, ACTION_FAIL_KEYWORD.

2002-08-22  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* SMTP.py (Connection.__connect): Add support for SSL.

	* Defaults.py (SMTPSSL, SMTPSSL_KEYFILE, SMTPSSL_CERTFILE): New
	variables.
	
2002-08-21  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Defaults.py (SMTPAUTH_USERNAME, SMTPAUTH_PASSWORD): New
	variables.
	
	* SMTP.py (Connection.__connect): Add support for SMTP
	authentication.
	
	* Defaults.py (MAX_AUTORESPONSES_PER_DAY, RESPONSE_DIR): New
	variables.

2002-08-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* MessageLogger.py: New module.

	* Defaults.py (LOGFILE_OUTGOING): New variable.

2002-08-07  Tim Legant  <tim@catseye.net>

	* FilterParser.py (_FilterFile): New class to hold per-file data.

	(FilterParser.__loadedby): New function to determine if file to be
	included has already been included (to prevent infinite loops).

	(FilterParser.read): Added code to detect file include loops and
	prevent infinite loops.

	(FilterParser.__init__): Moved Parser initialization to
	constructor.

	(FilterParser.__pushfile, FilterParser.__popfile,
	FilterParser.__file): New methods.

	(FilterParser.read, FilterParser.__readrule,
	FilterParser.__parseargs): Re-coded so recursive calls work.

	(FilterParser.__parse): Re-coded so recursive calls work.  The